@@ -33,13 +33,9 @@ import org.killbill.billing.util.customfield.CustomField;
 import org.killbill.billing.util.customfield.StringCustomField;
 import org.killbill.billing.util.entity.Pagination;
 import org.mockito.Mockito;
-import org.skife.jdbi.v2.Handle;
-import org.skife.jdbi.v2.tweak.HandleCallback;
 import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
-
-import com.google.common.collect.ImmutableList;
 
 public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
 
@@ -71,7 +67,7 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         Mockito.when(customField.getFieldValue()).thenReturn(UUID.randomUUID().toString());
 
         eventsListener.pushExpectedEvents(NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField), callContext);
+        customFieldUserApi.addCustomFields(List.of(customField), callContext);
         assertListenerStatus();
     }
 
@@ -81,14 +77,14 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         final CustomField customField1 = new StringCustomField("some123", "some 456", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
         final CustomField customField2 = new StringCustomField("other123", "other 456", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
         eventsListener.pushExpectedEvents(NextEvent.CUSTOM_FIELD, NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField1, customField2), callContext);
+        customFieldUserApi.addCustomFields(List.of(customField1, customField2), callContext);
         assertListenerStatus();
 
         // Verify operation is indeed transactional, and nothing was inserted
         final CustomField customField3 = new StringCustomField("qrqrq123", "qrqrq 456", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
         try {
-            customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField3, customField1), callContext);
-        } catch (CustomFieldApiException e) {
+            customFieldUserApi.addCustomFields(List.of(customField3, customField1), callContext);
+        } catch (final CustomFieldApiException e) {
             Assert.assertEquals(e.getCode(), ErrorCode.CUSTOM_FIELD_ALREADY_EXISTS.getCode());
         }
 
@@ -96,14 +92,14 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         Assert.assertEquals(all.size(), 2);
 
         eventsListener.pushExpectedEvent(NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField3), callContext);
+        customFieldUserApi.addCustomFields(List.of(customField3), callContext);
         assertListenerStatus();
 
         all = customFieldUserApi.getCustomFieldsForAccount(accountId, callContext);
         Assert.assertEquals(all.size(), 3);
 
         eventsListener.pushExpectedEvents(NextEvent.CUSTOM_FIELD, NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.removeCustomFields(ImmutableList.of(customField1, customField3), callContext);
+        customFieldUserApi.removeCustomFields(List.of(customField1, customField3), callContext);
         assertListenerStatus();
 
         all = customFieldUserApi.getCustomFieldsForAccount(accountId, callContext);
@@ -120,13 +116,13 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
 
         final CustomField customField1 = new StringCustomField("gtqre", "value1", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
         eventsListener.pushExpectedEvents(NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField1), callContext);
+        customFieldUserApi.addCustomFields(List.of(customField1), callContext);
         assertListenerStatus();
 
         final CustomField update1 = new StringCustomField(customField1.getId(), customField1.getFieldName(), "value2", customField1.getObjectType(), customField1.getObjectId(), callContext.getCreatedDate());
-        customFieldUserApi.updateCustomFields(ImmutableList.of(update1), callContext);
+        customFieldUserApi.updateCustomFields(List.of(update1), callContext);
 
-        List<CustomField> all = customFieldUserApi.getCustomFieldsForAccount(accountId, callContext);
+        final List<CustomField> all = customFieldUserApi.getCustomFieldsForAccount(accountId, callContext);
         Assert.assertEquals(all.size(), 1);
         Assert.assertEquals(all.get(0).getId(), update1.getId());
         Assert.assertEquals(all.get(0).getObjectType(), update1.getObjectType());
@@ -135,14 +131,14 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         Assert.assertEquals(all.get(0).getFieldValue(), "value2");
 
         try {
-            customFieldUserApi.updateCustomFields(ImmutableList.<CustomField>of(new StringCustomField("gtqre", "value1", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate())), callContext);
+            customFieldUserApi.updateCustomFields(List.of(new StringCustomField("gtqre", "value1", ObjectType.ACCOUNT, accountId, callContext.getCreatedDate())), callContext);
             Assert.fail("Updating custom field should fail");
         } catch (final CustomFieldApiException e) {
             Assert.assertEquals(e.getCode(), ErrorCode.CUSTOM_FIELD_DOES_NOT_EXISTS_FOR_ID.getCode());
         }
 
         try {
-            customFieldUserApi.updateCustomFields(ImmutableList.<CustomField>of(new StringCustomField(customField1.getId(), "wrongName", "value2", customField1.getObjectType(), customField1.getObjectId(), callContext.getCreatedDate())), callContext);
+            customFieldUserApi.updateCustomFields(List.of(new StringCustomField(customField1.getId(), "wrongName", "value2", customField1.getObjectType(), customField1.getObjectId(), callContext.getCreatedDate())), callContext);
             Assert.fail("Updating custom field should fail");
         } catch (final CustomFieldApiException e) {
             Assert.assertEquals(e.getCode(), ErrorCode.CUSTOM_FIELD_INVALID_UPDATE.getCode());
@@ -159,7 +155,7 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         final String cfValue = UUID.randomUUID().toString().substring(1, 4);
         final CustomField customField = new StringCustomField(cfName, cfValue, ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
         eventsListener.pushExpectedEvent(NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(customField), callContext);
+        customFieldUserApi.addCustomFields(List.of(customField), callContext);
         assertListenerStatus();
 
         checkPagination(1);
@@ -172,15 +168,12 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         Assert.assertEquals(customFields.get(0).getObjectId(), customField.getObjectId());
         Assert.assertEquals(customFields.get(0).getObjectType(), customField.getObjectType());
         // Verify the account_record_id was populated
-        dbi.withHandle(new HandleCallback<Void>() {
-            @Override
-            public Void withHandle(final Handle handle) throws Exception {
-                final List<Map<String, Object>> values = handle.select("select account_record_id from custom_fields where object_id = ?", accountId.toString());
-                Assert.assertEquals(values.size(), 1);
-                Assert.assertEquals(values.get(0).keySet().size(), 1);
-                Assert.assertEquals(Long.valueOf(values.get(0).get("account_record_id").toString()), accountRecordId);
-                return null;
-            }
+        dbi.withHandle(handle -> {
+            final List<Map<String, Object>> values = handle.select("select account_record_id from custom_fields where object_id = ?", accountId.toString());
+            Assert.assertEquals(values.size(), 1);
+            Assert.assertEquals(values.get(0).keySet().size(), 1);
+            Assert.assertEquals(Long.valueOf(values.get(0).get("account_record_id").toString()), accountRecordId);
+            return null;
         });
 
         eventsListener.pushExpectedEvent(NextEvent.CUSTOM_FIELD);
@@ -195,7 +188,7 @@ public class TestDefaultCustomFieldUserApi extends UtilTestSuiteWithEmbeddedDB {
         final CustomField newCustomField = new StringCustomField(cfName, cfValue, ObjectType.ACCOUNT, accountId, callContext.getCreatedDate());
 
         eventsListener.pushExpectedEvent(NextEvent.CUSTOM_FIELD);
-        customFieldUserApi.addCustomFields(ImmutableList.<CustomField>of(newCustomField), callContext);
+        customFieldUserApi.addCustomFields(List.of(newCustomField), callContext);
         assertListenerStatus();
         remainingCustomFields = customFieldUserApi.getCustomFieldsForObject(accountId, ObjectType.ACCOUNT, callContext);
         Assert.assertEquals(remainingCustomFields.size(), 1);
